--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "axios": "^1.1.3",
+    "framer-motion": "^7.6.4",
     "isomorphic-fetch": "^3.0.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "13.0.1",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-stack-cards": "^1.0.8",
     "slug": "^8.2.2"
   },
   "devDependencies": {
