--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.1.0",
     "react-dom": "18.2.0",
+    "react-flippy": "^1.1.0",
     "react-stack-cards": "^1.0.8",
     "slug": "^8.2.2"
   },
